--- a/package.json
+++ b/package.json
@@ -3,36 +3,20 @@
   "version": "2.0.0",
   "type": "module",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
-    "build": "vite build",
-    "build:client": "vite build"
+    "build": "vite build"
   },
   "dependencies": {
-    "docx": "^9.5.1",
-    "file-saver": "^2.0.5",
-    "jspdf": "^4.0.0",
-    "jszip": "^3.10.1",
-    "lucide-react": "^0.468.0",
-    "qrcode.react": "^4.2.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.6.0",
-    "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.28.0",
-    "remark-gfm": "^4.0.0",
-    "uuid": "^11.1.0",
-    "xlsx": "^0.18.5",
-    "zustand": "^5.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.7",
-    "@types/react": "^18.3.14",
-    "@types/react-dom": "^18.3.2",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.3"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "vite": "^5.0.0"
   }
 }
